Added validation for CreateOrderCommand

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8CU7SM6\\SQLEXPRESS; Database=CqrsDemo; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
